force-app/main/default/objects/Bank_Account__c/fields/Account_Holder_name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_name__c</fullName>
    <label>Account Holder name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>