force-app/main/default/objects/Bank_Account__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>8</length>
    <type>Text</type>
</CustomField>