force-app/main/default/objects/Bank_Account__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. beginner</fullName>
            </value>
            <value>
                <fullName>2. intermediate</fullName>
            </value>
            <value>
                <fullName>3. expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>