force-app/main/default/objects/Bank_Account__c/fields/Prefered_contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Prefered_contact_Type__c</fullName>
    <label>Prefered contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>