force-app/main/default/objects/Bank_Account__c/fields/Type_Of_Account__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Account__c</fullName>
    <label>Type Of Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Demand Draft</fullName>
            </value>
            <value>
                <fullName>Demat Account</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange Account</fullName>
            </value>
            <value>
                <fullName>Saving Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>