force-app/main/default/objects/Bank_Account__c/recordTypes/Employee_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Employee_Record_Type</fullName>
    <active>true</active>
    <description>Record Type For Employee Account</description>
    <label>Employee Record Type</label>
</RecordType>