force-app/main/default/objects/Bank_Account__c/recordTypes/Manager_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Manager_Record_Type</fullName>
    <active>true</active>
    <description>Record Type For Manager Account</description>
    <label>Manager Record Type</label>
</RecordType>