force-app/main/default/objects/Bank_Account__c/validationRules/Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Prefered_contact_Type__c , &#39;Email&#39;), ISBLANK( Email_Id__c )   )</errorConditionFormula>
    <errorMessage>Enter Email-Id</errorMessage>
</ValidationRule>